<resources>
    <string name="app_name">furniture_placer</string>
    <string name="logout">Logout</string>
    <string name="ar_view">AR view</string>
    <string name="addModelText">add model</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="newRoomDesc">add new room</string>
    <string name="logOutDesc">logout</string>
    <string name="newModelFabText">New</string>
    <string name="historyFabText">History</string>
    <string name="searchNewModelFab">search new model</string>
    <string name="deleteModelFab">delete model</string>
    <string name="addModelFab">add model</string>
    <string name="openMenuDesc">open menu</string>
    <string name="searchHistoryModelFab">search new model from history</string>
    <string name="roomNameField">Room</string>
    <string name="createRoomBtnText">Create Room</string>
    <string name="createRoomBtnDesc">Create Room button</string>
    <string name="cancelAction">Cancel</string>
    <string name="screenshotFabText">Screenshot</string>
    <string name="screenshotFabDesc">Take screenshot</string>
    <string name="loginText">Sign In with Google</string>
    <string name="appName" translatable="false">Furniture Placer</string>
    <string name="noHistoryToast">You do not have any models in history</string>
    <string name="Room_create">Create Room</string>
    <string name="no_rooms_desc">There are no rooms right now</string>
    <string name="model_select_desc">Select Model</string>
    <string name="compare_text">compare</string>
    <string name="edit_room">Edit Room</string>
    <string name="edit_roomBtn_contDesc">edit room</string>
    <string name="room_menuBtn_contDesc">menu</string>
    <string name="room_slider_type_first">Room contains these models</string>
    <string name="room_slider_type_second">Screenshot contains these models</string>
    <string name="screenshot">"Screenshot %1$d"</string>
    <string name="room">"Room: %1$s"</string>
    <string name="price" translatable="false">"%1$s€"</string>
    <string name="id" translatable="false">"id: %1$s"</string>
    <string name="model_count">"%1$d model(s) in this room"</string>
    <string name="no_models">No models</string>
    <string name="create_room">Create Room</string>
    <string name="your_rooms">Your rooms</string>
    <string name="delete_room">delete room</string>
    <string name="default_text">default</string>
    <string name="room_image">image of room</string>
    <string name="models_inside_image">Models inside image</string>
    <string name="room_image_capture">Capture room image</string>
    <string name="compare_rooms">Compare rooms</string>
    <string name="model_image">Model image</string>
    <string name="google_logo">Google logo</string>
    <string name="app_logo">App logo</string>
    <string name="screenshot_question">Do you want to take screenshot? This will save the screenshot and reset the ar view.</string>
    <string name="screenshot_success">Screenshot taken</string>
    <string name="screenshot_empty">You have not added any models. Screenshot not taken.</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_message">Permission to access %1$s is required in order to use this app.</string>
    <string name="permission_success">%1$s permission granted</string>
    <string name="permission_denied">%1$s permission refused</string>
    <string name="camera_permission_denied">Permission to use camera is not granted.</string>
    <string name="create_room_empty_check">Room name and image needed.</string>
    <string name="compare_price_desc">Price sum for each screenshot</string>
    <string name="screenshots">Screenshots</string>
</resources>