<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ArFragmentView">


    <fragment
        android:id="@+id/sceneform_fragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />




    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/openMenuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/openMenuDesc"
            android:src="@drawable/ic_baseline_archive_24"
            app:backgroundTint="@color/primary"
            app:icon="@drawable/ic_baseline_archive_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/primary" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/addModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/addModelFab"
            android:src="@drawable/ic_baseline_add_24"
            android:text="@string/addModelText"
            app:backgroundTint="@color/primary"
            app:icon="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/primary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteModelbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/deleteModelFab"
            android:src="@drawable/ic_baseline_clear_24"
            android:visibility="gone"
            app:backgroundTint="@color/primary"
            app:icon="@drawable/ic_baseline_clear_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/primary" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/historyModelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/searchHistoryModelFab"
        android:visibility="gone"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/primary"
        app:srcCompat="@drawable/ic_baseline_history_24" />

    <TextView
        android:id="@+id/historyModelText"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/fab_text_bg"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/historyFabText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/historyModelBtn"
        app:layout_constraintEnd_toStartOf="@+id/historyModelBtn"
        app:layout_constraintTop_toTopOf="@+id/historyModelBtn"
        app:layout_constraintVertical_bias="0.459" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newModelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/searchNewModelFab"
        android:visibility="gone"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/historyModelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/primary"
        app:srcCompat="@drawable/ic_baseline_fiber_new_24" />

    <TextView
        android:id="@+id/newModelTxt"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/fab_text_bg"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/newModelFabText"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/newModelBtn"
        app:layout_constraintEnd_toStartOf="@+id/newModelBtn"
        app:layout_constraintTop_toTopOf="@+id/newModelBtn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/screenshotBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/screenshotFabDesc"
        android:visibility="gone"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/newModelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/primary"
        app:srcCompat="@drawable/ic_baseline_camera" />

    <TextView
        android:id="@+id/screenshotTxt"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/fab_text_bg"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/screenshotFabText"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/screenshotBtn"
        app:layout_constraintEnd_toStartOf="@+id/screenshotBtn"
        app:layout_constraintTop_toTopOf="@+id/screenshotBtn" />



</androidx.constraintlayout.widget.ConstraintLayout>