<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context=".fragments.RoomDetailFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.mazenrashed.dotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            app:dot_height="12dp"
            app:dot_width="12dp"
            app:dots_count="1"
            app:first_dot_height="17dp"
            app:first_dot_width="17dp"
            app:first_selected_dot_resource="@drawable/ic_home_white_24dp"
            app:first_unselected_dot_resource="@drawable/ic_home_gray_24dp"
            app:margins_between_dots="17dp"
            app:selected_dot_resource="@drawable/circle_white"
            app:selected_dot_scale_factor="1.4"
            app:unselected_dot_resource="@drawable/circle_white">

        </com.mazenrashed.dotsindicator.DotsIndicator>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sliderList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/roomMenuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary"
            android:src="@drawable/ic_baseline_menu_24"
            app:backgroundTint="@color/primary"
            app:rippleColor="@color/primary"
            android:contentDescription="@string/room_menuBtn_contDesc" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/compare_rooms"
        android:visibility="gone"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/editRoomBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/primary"
        app:srcCompat="@drawable/ic_baseline_compare_24" />

    <TextView
        android:id="@+id/compareText"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/fab_text_bg"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/compare_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/compareBtn"
        app:layout_constraintEnd_toStartOf="@+id/compareBtn"
        app:layout_constraintTop_toTopOf="@+id/compareBtn" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editRoomBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/edit_roomBtn_contDesc"
        android:visibility="gone"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/primary"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <TextView
        android:id="@+id/editRoomText"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/fab_text_bg"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/edit_room"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/editRoomBtn"
        app:layout_constraintEnd_toStartOf="@+id/editRoomBtn"
        app:layout_constraintTop_toTopOf="@+id/editRoomBtn"
        app:layout_constraintVertical_bias="0.459" />

</androidx.constraintlayout.widget.ConstraintLayout>