<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@color/primaryVariant"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="30dp"
        android:background="#d3d3d3"
        app:cardCornerRadius="15dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:layout_editor_absoluteX="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo_icon_1028"
                android:contentDescription="@string/app_logo"
                />


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="30dp"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/Signin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primary"
                    android:padding="10dp">

                    <ImageView
                        android:contentDescription="@string/google_logo"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="start"
                        android:layout_marginEnd="5dp"
                        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/loginText"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>