<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/roomCard"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            app:cardElevation="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/roomTextField"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:hint="@string/roomNameField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/roomTextFieldInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelRoomBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/cancelAction"
                android:textColor="@color/primary"
                app:strokeColor="@color/primary" />

            <Button
                android:id="@+id/createRoomBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/createRoomBtnText"
                android:textColor="@color/primary"
                app:strokeColor="@color/primary" />

        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/roomPreviewImg"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>